# weather-api

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: config.py
src/shared/: redis_client.py
src/weather/api/: main.py
src/weather/api/routers/: health.py
src/weather/application/get_weather/: get_weather_query.py  get_weather_query_handler.py  get_weather_query_response.py
src/weather/delivery/api/: main.py
src/weather/delivery/api/routers/: health.py  weather.py
src/weather/domain/: weather.py  weather_location_not_found_error.py  weather_repository.py
src/weather/infrastructure/: in_memory_weather_repository.py  redis_weather_repository.py  visual_crossing_weather_repository.py
tests/: test_health_router.py
tests/application/: test_get_weather_query_handler.py
tests/delivery/api/: test_health_router.py  test_weather_router.py
