[project]
name = "weather-api"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "uvicorn",
    "redis",
    "fakeredis",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
